Fixed profile link on thanks page

--- a/views/thanks.ejs
+++ b/views/thanks.ejs
@@ -21,7 +21,7 @@
 		    <h1 class="text-success">Thanks!</h1>
 		    <p>Your feedback has been saved.</p>
 		    <a href="/event/<%=attendance.eventid%>" class="btn btn-large">View event</a>
-		    <a href="/event/<%=attendance.personid%>" class="btn btn-large">View your profile</a>		    
+		    <a href="/person/<%=attendance.personid%>" class="btn btn-large">View your profile</a>		    
 		</div>
 	</div>
 
