--- a/views/error.ejs
+++ b/views/error.ejs
@@ -2,19 +2,10 @@
 <html>
   <head>
     <title>Get started | Backfood</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    
-    <link rel='stylesheet' href='/javascripts/bootstrap/css/bootstrap.css' type="text/css" />
-    <link rel='stylesheet' href='/javascripts/bootstrap/css/bootstrap-responsive.css' type="text/css" />
-    
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-    <script src="/javascripts/bootstrap/js/bootstrap.js" type="text/javascript"></script>
+	<% include includes/styles-and-scripts.html %>    
   </head>
   <body>
-  	<div id="header">Backfood</div>
+  	<% include includes/header.html %>
   	
   	<div class="container">
 	  	<div id="main" class="jumbotron">
