--- a/views/event.ejs
+++ b/views/event.ejs
@@ -2,14 +2,8 @@
 <html>
   <head>
     <title><%=event.name%> | Event | Backfood</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    
-    <link rel='stylesheet' href='/javascripts/bootstrap/css/bootstrap.css' type="text/css" />
-    <link rel='stylesheet' href='/javascripts/bootstrap/css/bootstrap-responsive.css' type="text/css" />
-    
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-    <script src="/javascripts/bootstrap/js/bootstrap.js" type="text/javascript"></script>
+ 
+	<% include includes/styles-and-scripts.html %>    
 
 	<script type="text/javascript">
 		$(function(){
@@ -33,7 +27,7 @@
 	</script>
   </head>
   <body>
-  	<div id="header">Backfood</div>
+  	<% include includes/header.html %>
   	
   	<div class="container">
   	
