--- a/views/people.ejs
+++ b/views/people.ejs
@@ -2,19 +2,21 @@
 <html>
   <head>
   	<title>All registered people | Backfood</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+	<% include includes/styles-and-scripts.html %>    
   </head>
   <body>
-  	<div id="header">Backfood</div>
-  	  
-    <h1>All people</h1>
-    
-    <ul>
-	<% for(var i=0; i<people.length; i++) {%>
-	   <li><a href="/person/<%=people[i]._id%>"><%= people[i].name %></a></li>
-	<% } %>
-	</ul>
-    
+  	<% include includes/header.html %>
+
+	<div class="container">
+	    <h1>All people</h1>
+	    
+	    <ul>
+		<% for(var i=0; i<people.length; i++) {%>
+		   <li><a href="/person/<%=people[i]._id%>"><%= people[i].name %></a></li>
+		<% } %>
+		</ul>
+	</div>
+	    
 	<script src="/javascripts/analytics.js" type="text/javascript"></script>
   </body>
 </html>
