--- a/views/includes/header.html
+++ b/views/includes/header.html
@@ -1,1 +1,6 @@
-  	<div id="header"><a href="/">Backfood</a></div>
+  	<div id="header">
+  		<span class="pull-right">
+  			<a href="/help/overview" class="btn btn-info">Help</a>
+  		</span>
+  		<a href="/">Backfood</a>
+  	</div>
