tidy up help button

--- a/views/includes/header.html
+++ b/views/includes/header.html
@@ -1,6 +1,6 @@
   	<div id="header">
-  		<span class="pull-right">
-  			<a href="/help/overview" class="btn btn-info">Help</a>
+  		<span class="pull-right btn-group">
+  			<a href="/help/overview" class="btn">Help</a>
   		</span>
   		<a href="/">Backfood</a>
   	</div>
